--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -16,13 +16,13 @@ python = "^3.10"
 fastapi = "^0.100.0"
 uvicorn = "^0.23.0"
 sqlalchemy = "^2.0.0"
-nvidia-ml-py = "^11.525.0"
+nvidia-ml-py = "^12.560.30"
 prometheus-client = "^0.17.0"
 pydantic = "^2.0.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
-asyncpg = "^0.27.0"
+asyncpg = "^0.28.0"
 alembic = "^1.11.0"
 redis = "^4.6.0"
 httpx = "^0.24.0"
@@ -34,6 +34,7 @@ psutil = "^5.9.0"
 aiofiles = "^23.1.0"
 stripe = "^5.4.0"
 boto3 = "^1.28.0"
+pydantic-settings = "^2.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -57,7 +58,7 @@ backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 100
 target-version = ["py310"]
-include = "\.pyi?$"
+include = "\\.pyi?$"
 extend-exclude = "/migrations/"
 
 [tool.isort]
