--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,6 +1,6 @@
 gunicorn==21.2.0
 uvicorn==0.23.0
-pydantic==2.0.0
+pydantic==2.10.5
 aiohttp==3.8.5
 python-dotenv==1.0.0
 
@@ -8,10 +8,10 @@ sqlalchemy==2.0.0
 asyncpg==0.28.0
 alembic==1.11.0
 sqlalchemy-utils==0.41.0
-sqlalchemy-timescaledb==0.5.0
+sqlalchemy-timescaledb==0.4.1
 
-redis==7.0.0
-aioredis==2.0.0
+redis==4.6.0
+aioredis==1.3.1
 
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
@@ -25,11 +25,13 @@ kubernetes==27.2.0
 
 prometheus-client==0.17.0
 python-json-logger==2.0.7
+json-logging==1.3.0
 structlog==23.1.0
-elasticsearch-logger==1.2.0
+elasticsearch-logger==0.0.2
 sentry-sdk==1.28.1
 
 stripe==5.4.0
+fastapi==0.100.0
 fastapi-limiter==0.1.5
 fastapi-cache==0.1.0
 tenacity==8.0.0
@@ -37,16 +39,15 @@ cachetools==5.0.0
 circuitbreaker==1.4.0
 loguru==0.7.0
 
-boto3==1.26.0
-botocore==1.29.0
+boto3==1.35.96
+botocore==1.35.96
 minio==7.1.0
 
 pyroute2==0.7.3
-openvswitch==2.17.0
 
 websockets==11.0.0
 jsonschema==4.0.0
-iso4217==1.6.0
+iso4217==1.12.20240625
 
 pytest==7.4.0
 pytest-asyncio==0.21.0
@@ -57,3 +58,4 @@ black==23.7.0
 flake8==6.1.0
 mypy==1.4.0
 isort==5.12.0
+psycopg2==2.9.10
